# audionab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  audionab.py  build.bat  build_nuitka.bat  build_pyinstaller.bat  installer.iss  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
audionab/: __init__.py  __main__.py  config.py  context_menu.py  converter.py  database.py  helpers.py  transcriber.py  tray.py  watcher.py
audionab/ui/: __init__.py  app.py  settings.py  toast.py
scripts/: download_ffmpeg.py  generate_icon.py
tests/: test_config.py  test_converter.py  test_database.py  test_helpers.py
